unpackaged/main/default/objects/Gift__c/Gift__c.object-meta.xml
<CustomObject>
    <label>Gift</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Gift Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>