unpackaged/main/default/objects/Gift__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEIT 1898 TOKYO VIC Gift</fullName>
            </value>
            <value>
                <fullName>Welcome</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Chinese New Year 2022</fullName>
            </value>
            <value>
                <fullName>Holiday season 2022</fullName>
            </value>
            <value>
                <fullName>Mooncake box 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>