unpackaged/main/default/objects/Gift__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chess Box</fullName>
            </value>
            <value>
                <fullName>125th Year Anniversary 1</fullName>
            </value>
            <value>
                <fullName>125th Year Anniversary 2</fullName>
            </value>
            <value>
                <fullName>Welcome 1</fullName>
            </value>
            <value>
                <fullName>Welcome 2</fullName>
            </value>
            <value>
                <fullName>Birthday 1</fullName>
            </value>
            <value>
                <fullName>Birthday 2</fullName>
            </value>
            <value>
                <fullName>Wedding 1</fullName>
            </value>
            <value>
                <fullName>Wedding 2</fullName>
            </value>
            <value>
                <fullName>Holiday season 2022 1</fullName>
            </value>
            <value>
                <fullName>Holiday season 2022 2</fullName>
            </value>
            <value>
                <fullName>Stickers</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>