unpackaged/main/default/objects/Gift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Country__c</columns>
    <columns>Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>